fixed consistency of link hover color (all are now green), made article text bigger and background brighter for better contrast

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@
 
 article {
   border-radius: 8px;
-  background-color: rgb(167, 162, 161);
+  background-color: rgb(177, 182, 176);
   border-style: solid;
   border-width: 3px;
   border-color: black;
@@ -141,7 +141,7 @@ article {
 }
 
 a > sup {
-  color: blue;
+  color: rgb(15, 104, 67);
 }
 
 a > sup:hover {
@@ -149,13 +149,16 @@ a > sup:hover {
 }
 
 a,
-a:link,
 a:visited,
-a:hover,
+a:link,
 a:active {
   position: relative;
   color: inherit;
   text-decoration: none;
+}
+
+li a:hover {
+  color: rgb(15, 104, 67);
 }
 
 li:hover {
@@ -163,5 +166,13 @@ li:hover {
 }
 
 .big-article:hover {
+  color: rgb(15, 104, 67);
+}
+
+.article-text {
+  font-size: large;
+}
+
+.page-header a:hover {
   color: rgb(15, 104, 67);
 }
